1.1: Fixed alignment issues

--- a/styles.css
+++ b/styles.css
@@ -449,7 +449,9 @@ body, html {
 
 @media (max-width: 650px) {
     #hero #header #logo {
-        height: 30px;
+        margin: auto 10px;
+        padding: 10px;
+        height: 40px;
     }
 
     #hero #header #navbar {
